--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js",
+    "db:create": "createdb freEbay-app",
+    "db:init": "psql -f schema.sql freEbay-app && psql -f seed.sql freEbay-app",
+    "db:destroy": "dropdb freEbay-app",
+    "db:reset": "npm run db:destroy ; npm run db:create && npm run db:init",
+    "test": "mocha",
+    "test:watch": "mocha -w"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "pg-promise": "^8.6.4"
+    "pg-promise": "^8.6.4",
+    "session": "^0.1.0",
+    "session-file-store": "^1.2.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
